# frogbox

./: .flake8  .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  mkdocs.yml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.py  train.py  utils.py
.github/workflows/: docs.yml  pytest.yml  python-publish-test.yml  python-publish.yml
configs/: datasets.json  example.json
datasets/: example.py
docs/: getting_started.md  index.md  make.py  requirements.txt
docs/guides/: loading_models.md  metrics.md
docs/reference/: callbacks.md  events.md  pipelines.md
docs/template/: theme.css
engines/: supervised.py
example/: service.py  train.py
example/configs/: datasets.json  example.json
example/datasets/: example.py
examples/gan/: train.py
examples/supervised/: train.py
frogbox/: __init__.py  cli.py  config.py  intro.md  run.py  service.py  tensor_utils.py  utils.py
frogbox/callbacks/: __init__.py  callback.py  ema.py  image_logger.py
frogbox/data/: service.py  train_gan.py  train_supervised.py
frogbox/engines/: common.py  engine.py  events.py  gan.py  supervised.py
frogbox/handlers/: checkpoint.py  composite_loss_logger.py  metric_logger.py  optimizer_logger.py  output_logger.py
frogbox/metrics/: __init__.py  guide.md
frogbox/pipelines/: __init__.py  common.py  composite_loss.py  gan.py  logger.py  lr_scheduler.py  name_generation.py  pipeline.py  save_handler.py  supervised.py
losses/: composite.py
metrics/: element_mae.py
models/: example.py
pipelines/: supervised.py
stort/: __init__.py  cli.py  config.py  service.py  utils.py
stort/callbacks/: __init__.py  callback.py  image_logger.py
stort/data/: Dockerfile  config_full.json  (+7 more)
tests/: test_config.py  test_package.py  test_template_configs.py
trainer/: __init__.py  config.py
(+24 files in other folders)
