[project]
name = "frogbox"
authors = [
    {name = "Simon J. Larsen", email = "simonhffh@gmail.com"},
]
description = "An opinionated machine learning framework"
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version"]
requires-python = ">= 3.10"
dependencies = [
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "accelerate>=1.2.0",
    "torchmetrics>=1.6.0",
    "pydantic>=2.10.3",
    "tqdm>=4.67.1",
    "wandb>=0.18.7",
    "jinja2>=3.1.4",
    "click>=8.1.7",
]

[project.urls]
Homepage = "https://hisimon.dk/frogbox"
Issues = "https://github.com/SimonLarsen/frogbox/issues"

[project.scripts]
frogbox = "frogbox.cli:cli"

[tool.setuptools.dynamic]
version = {attr = "frogbox.__version__"}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
