[project]
name = "frogbox"
authors = [
    {name = "Simon J. Larsen", email = "simonhffh@gmail.com"},
]
description = "An opinionated machine learning framework"
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version"]
requires-python = ">= 3.10"
dependencies = [
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "accelerate>=1.12.0",
    "torchmetrics>=1.8.2",
    "pydantic>=2.12.4",
    "tqdm>=4.67.1",
    "jinja2>=3.1.6",
    "click>=8.3.1",
    "PyYAML>=6.0.3",
]

[project.urls]
Homepage = "https://github.com/SimonLarsen/frogbox"
Issues = "https://github.com/SimonLarsen/frogbox/issues"

[project.scripts]
frogbox = "frogbox.cli:cli"

[tool.setuptools.dynamic]
version = {attr = "frogbox.__version__"}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
